# bridgechem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
bridgechem/: __init__.py  analysis.py  box.py  constants.py  kernels.py  simulation.py  viz.py
examples/: demo.ipynb
tests/: test_api.py  test_lj.py  test_physics.py  test_viz.py
