[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgechem"
version = "0.1.0"
description = "Exploratory particle simulations for teaching physical chemistry, bridging the microscopic, macroscopic and symbolic levels."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "bridgechem contributors" }]
keywords = ["chemistry", "physics", "molecular-dynamics", "education", "simulation"]
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.4",
    "ipython>=7.0",
    "ipywidgets>=7.0",
]

[project.optional-dependencies]
# numba is strongly recommended for realistic system sizes, but the package
# runs (slowly) without it thanks to a pure-Python fallback in kernels.py.
fast = ["numba>=0.56"]
# ipympl gives smooth, low-latency playback (a live canvas, blitted, instead
# of re-encoding a PNG every frame) -- install it and run `%matplotlib widget`
# before creating simulations. Not required; playback still works without it.
smooth = ["ipympl>=0.9"]
dev = ["pytest>=7.0", "numba>=0.56", "ipympl>=0.9"]

[tool.setuptools.packages.find]
include = ["bridgechem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
